[package]
name = "anvil-calc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
itertools = "0.10.5"
tinyvec = { version = "1.6.0", features = ["alloc"] }
serde_yaml = "0.9.16"
serde = { version = "1.0.152", features = ["derive"] }
wasm-bindgen = "0.2.83"
console_error_panic_hook = "0.1.7"
instant = { version = "0.1.12", features = [ "wasm-bindgen", "inaccurate" ] }
lfu_cache = "1.2.2"

[profile.release]
lto = true
