[package]
name = "anvil-calc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
itertools = "0.12.0"
tinyvec = { version = "1.6.0", features = ["alloc"] }
serde_yaml = "0.9.30"
serde = { version = "1.0.195", features = ["derive"] }
wasm-bindgen = "0.2.89"
console_error_panic_hook = "0.1.7"
instant = { version = "0.1.12", features = [ "wasm-bindgen", "inaccurate" ] }
lfu_cache = "1.3.0"
lru = "0.12.1"

[profile.release]
lto = true
